@@ -3,14 +3,12 @@ package ewm.event.pub;
 import ewm.event.Event;
 import ewm.event.EventRepository;
 import ewm.event.mapper.EventMapper;
-import ewm.interaction.dto.request.ParticipationRequestDto;
 import ewm.interaction.dto.request.RequestStatus;
 import ewm.interaction.feign.RequestFeignClient;
 import ewm.interaction.feign.UserFeignClient;
 import ewm.interaction.dto.event.EventFullDto;
 import ewm.interaction.dto.event.EventShortDto;
 import ewm.interaction.dto.event.State;
-import ewm.interaction.dto.user.UserDto;
 import ewm.interaction.dto.user.UserShortDto;
 import ewm.interaction.exception.NotFoundException;
 import ewm.interaction.exception.ValidationException;
@@ -18,23 +16,26 @@ import ewm.utils.EventValidationService;
 import io.grpc.StatusRuntimeException;
 import jakarta.servlet.http.HttpServletRequest;
 import lombok.AccessLevel;
+import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import ru.practicum.ewm.stats.client.AnalyzerClient;
 import ru.practicum.ewm.stats.client.CollectorClient;
 import ru.practicum.grpc.stats.recommendation.RecommendedEventProto;
+
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
+@RequiredArgsConstructor
 @FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true)
 public class EventPublicServiceImpl implements EventPublicService {
 
@@ -46,180 +47,185 @@ public class EventPublicServiceImpl implements EventPublicService {
     CollectorClient collectorClient;
     RequestFeignClient requestFeignClient;
 
-    public EventPublicServiceImpl(EventRepository eventRepository,
-                                  EventMapper eventMapper,
-                                  EventValidationService eventValidationService,
-                                  UserFeignClient userClient,
-                                  AnalyzerClient analyzerClient,
-                                  CollectorClient collectorClient, RequestFeignClient requestFeignClient) {
-        this.eventRepository = eventRepository;
-        this.eventMapper = eventMapper;
-        this.eventValidationService = eventValidationService;
-        this.userClient = userClient;
-        this.analyzerClient = analyzerClient;
-        this.collectorClient = collectorClient;
-        this.requestFeignClient = requestFeignClient;
-    }
-
-    static LocalDateTime minTime = LocalDateTime.of(1970, 1, 1, 0, 0);
-    static LocalDateTime maxTime = LocalDateTime.of(3000, 1, 1, 0, 0);
     static DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
 
     @Override
     public List<EventShortDto> getEvents(String text, List<Long> categories, Boolean paid,
                                          String rangeStart, String rangeEnd, Boolean onlyAvailable,
                                          String sort, Integer from, Integer size, HttpServletRequest request) {
-        Pageable pageable = PageRequest.of(from / size, size);
-        LocalDateTime start = rangeStart != null ? LocalDateTime.parse(rangeStart, formatter) : minTime;
-        LocalDateTime end = rangeEnd != null ? LocalDateTime.parse(rangeEnd, formatter) : maxTime;
-        text = text != null ? text.toLowerCase() : "";
+        Sort sortOption = sort != null && sort.equals("EVENT_DATE") ?
+                Sort.by("eventDate").ascending() :
+                Sort.by("rating").descending();
+        Pageable pageable = PageRequest.of(from / size, size, sortOption);
 
-        Page<Event> events = eventRepository.findEvents(text, paid, start, end, categories, onlyAvailable,
-                State.PUBLISHED, pageable);
+        LocalDateTime start = rangeStart != null ? LocalDateTime.parse(rangeStart, formatter) : LocalDateTime.now();
+        LocalDateTime end = rangeEnd != null ? LocalDateTime.parse(rangeEnd, formatter) : LocalDateTime.now().plusYears(100);
+
+        text = text != null ? text.toLowerCase() : "";
+        Page<Event> events = eventRepository.findEvents(text, paid, start, end, categories, onlyAvailable, State.PUBLISHED, pageable);
 
         if (events.isEmpty()) {
-            throw new ValidationException("Нет подходящих событий");
+            log.info("No events found for query: text={}, categories={}, paid={}, start={}, end={}, onlyAvailable={}",
+                    text, categories, paid, start, end, onlyAvailable);
+            return List.of();
         }
 
-        List<Long> userIds = events.stream().map(Event::getInitiatorId).collect(Collectors.toList());
+        List<Long> eventIds = events.getContent().stream().map(Event::getId).toList();
+        Map<Long, Double> ratings;
+        try {
+            ratings = analyzerClient.getInteractionsCount(eventIds);
+        } catch (StatusRuntimeException e) {
+            log.error("Failed to fetch ratings from analyzer: {}", e.getStatus(), e);
+            ratings = Map.of();
+        }
+
+        List<Long> userIds = events.getContent().stream().map(Event::getInitiatorId).toList();
         List<UserShortDto> usersDto = userClient.getUsers(userIds, 0, userIds.size()).stream()
                 .map(userDto -> UserShortDto.builder().id(userDto.getId()).name(userDto.getName()).build())
-                .collect(Collectors.toList());
+                .toList();
 
-        List<Long> eventIds = events.getContent().stream().map(Event::getId).collect(Collectors.toList());
-        Map<Long, Double> ratings = analyzerClient.getInteractionsCount(eventIds);
-
-        List<EventShortDto> dtos = events.getContent().stream().map(event -> {
+        Map<Long, Double> finalRatings = ratings;
+        return events.getContent().stream().map(event -> {
             UserShortDto initiator = usersDto.stream()
                     .filter(user -> user.getId().equals(event.getInitiatorId()))
                     .findAny()
-                    .orElseThrow(() -> new NotFoundException("Пользователя с таким id нет"));
-            double rating = ratings.getOrDefault(event.getId(), 0.0);
+                    .orElseThrow(() -> new NotFoundException("Пользователь с id=" + event.getInitiatorId() + " не найден"));
+            double rating = finalRatings.getOrDefault(event.getId(), 0.0);
             event.setRating(rating);
             return eventMapper.toShortDto(event, initiator);
-        }).collect(Collectors.toList());
-
-        if (sort != null) {
-            if (sort.equals("EVENT_DATE")) {
-                dtos = dtos.stream()
-                        .sorted((dto1, dto2) -> dto1.getEventDate().compareTo(dto2.getEventDate()))
-                        .collect(Collectors.toList());
-            } else if (sort.equals("RATING")) {
-                dtos = dtos.stream()
-                        .sorted((dto1, dto2) -> Double.compare(dto2.getRating(), dto1.getRating()))
-                        .collect(Collectors.toList());
-            }
-        }
-
-        return dtos;
+        }).toList();
     }
 
     @Override
     public EventFullDto getEventById(Long id, HttpServletRequest request, Long userId) {
         Event event = eventValidationService.checkPublishedEvent(id);
-        UserDto userDto = userClient.getUser(event.getInitiatorId());
-
-        Map<Long, Double> ratings = analyzerClient.getInteractionsCount(List.of(id));
-        double rating = ratings.getOrDefault(id, 0.0);
-        event.setRating(rating);
-
-        collectorClient.viewEvent(userId, id);
-
-        return eventMapper.toFullDto(event, UserShortDto.builder()
-                .id(userDto.getId())
-                .name(userDto.getName())
-                .build());
+        return getEventFullDto(event, userId);
     }
 
     @Override
     public EventFullDto getEventByIdInternal(Long id) {
         Event event = eventRepository.findById(id)
-                .orElseThrow(() -> new NotFoundException("Ивента с таким id нет"));
-        UserDto userDto = userClient.getUser(event.getInitiatorId());
-
-        Map<Long, Double> ratings = analyzerClient.getInteractionsCount(List.of(id));
-        double rating = ratings.getOrDefault(id, 0.0);
-        event.setRating(rating);
-
-        return eventMapper.toFullDto(event, UserShortDto.builder()
-                .id(userDto.getId())
-                .name(userDto.getName())
-                .build());
+                .orElseThrow(() -> new NotFoundException("Событие с id=" + id + " не найдено"));
+        return getEventFullDto(event, null);
     }
 
     @Override
     public void changeEventFields(EventFullDto eventFullDto) {
         Event event = eventRepository.findById(eventFullDto.getId())
-                .orElseThrow(() -> new NotFoundException("События с таким id нет"));
+                .orElseThrow(() -> new NotFoundException("Событие с id=" + eventFullDto.getId() + " не найдено"));
 
         if (!eventFullDto.getConfirmedRequests().equals(event.getConfirmedRequests())) {
             event.setConfirmedRequests(eventFullDto.getConfirmedRequests());
+            eventRepository.save(event);
+            log.info("Updated confirmed requests for event id={}: {}", event.getId(), event.getConfirmedRequests());
         }
-
-        eventRepository.save(event);
     }
 
     @Override
     public List<EventShortDto> getRecommendations(Long userId, Integer from, Integer size) {
-        List<RecommendedEventProto> recommendedEvents = analyzerClient.getRecommendations(userId, size)
-                .skip(from)
-                .limit(size)
-                .toList();
+        List<RecommendedEventProto> recommendedEvents;
+        try {
+            recommendedEvents = analyzerClient.getRecommendations(userId, size)
+                    .skip(from)
+                    .limit(size)
+                    .toList();
+        } catch (StatusRuntimeException e) {
+            log.error("Failed to fetch recommendations for userId={}: {}", userId, e.getStatus(), e);
+            return List.of();
+        }
 
         if (recommendedEvents.isEmpty()) {
+            log.info("No recommendations found for userId={}", userId);
             return List.of();
         }
 
         List<Long> eventIds = recommendedEvents.stream()
                 .map(RecommendedEventProto::getEventId)
-                .collect(Collectors.toList());
+                .toList();
 
         List<Event> events = eventRepository.findAllById(eventIds).stream()
                 .filter(event -> event.getState() == State.PUBLISHED)
                 .toList();
 
-        List<Long> userIds = events.stream().map(Event::getInitiatorId).collect(Collectors.toList());
+        if (events.isEmpty()) {
+            log.info("No published events found for recommended eventIds={}", eventIds);
+            return List.of();
+        }
+
+        List<Long> userIds = events.stream().map(Event::getInitiatorId).toList();
         List<UserShortDto> usersDto = userClient.getUsers(userIds, 0, userIds.size()).stream()
                 .map(userDto -> UserShortDto.builder().id(userDto.getId()).name(userDto.getName()).build())
                 .toList();
 
-        Map<Long, Double> ratings = analyzerClient.getInteractionsCount(eventIds);
+        Map<Long, Double> ratings;
+        try {
+            ratings = analyzerClient.getInteractionsCount(eventIds);
+        } catch (StatusRuntimeException e) {
+            log.error("Failed to fetch ratings for eventIds={}: {}", eventIds, e.getStatus(), e);
+            ratings = Map.of();
+        }
 
+        Map<Long, Double> finalRatings = ratings;
         return events.stream().map(event -> {
             UserShortDto initiator = usersDto.stream()
                     .filter(user -> user.getId().equals(event.getInitiatorId()))
                     .findAny()
-                    .orElseThrow(() -> new NotFoundException("Пользователя с таким id нет"));
-            double rating = ratings.getOrDefault(event.getId(), 0.0);
+                    .orElseThrow(() -> new NotFoundException("Пользователь с id=" + event.getInitiatorId() + " не найден"));
+            double rating = finalRatings.getOrDefault(event.getId(), 0.0);
             event.setRating(rating);
             return eventMapper.toShortDto(event, initiator);
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
     @Override
     public void likeEvent(Long eventId, Long userId) {
         Event event = eventValidationService.checkPublishedEvent(eventId);
+        userClient.getUser(userId);
 
-        List<ParticipationRequestDto> requests = requestFeignClient.findRequestsByUserId(userId);
-        boolean hasRegistered = requests.stream()
+        boolean hasConfirmedRequest = requestFeignClient.findRequestsByEventId(userId, eventId)
+                .stream()
                 .anyMatch(req -> req.getEvent().equals(eventId) && req.getStatus().equals(RequestStatus.CONFIRMED.toString()));
-        if (!hasRegistered) {
-            log.warn("User {} has not confirmed registration for event {}", userId, eventId);
+
+        if (!hasConfirmedRequest) {
+            log.warn("User id={} has not confirmed registration for event id={}", userId, eventId);
             throw new ValidationException("Пользователь не зарегистрирован на мероприятие с id=" + eventId);
         }
 
         try {
-            log.info("Recording like for user {} and event {}", userId, eventId);
+            log.info("Recording LIKE action for userId={} and eventId={}", userId, eventId);
             collectorClient.addLikeEvent(userId, eventId);
         } catch (StatusRuntimeException e) {
-            log.error("gRPC error while recording like for event {}: {}", eventId, e.getStatus());
-            throw new ValidationException("Ошибка при записи лайка мероприятия");
+            log.error("gRPC error while recording LIKE for eventId={}: {}", eventId, e.getStatus(), e);
+            throw new ValidationException("Ошибка при записи лайка для мероприятия с id=" + eventId);
         }
     }
 
-    private boolean checkUserRegistration(Long userId, Long eventId) {
-        Event event = eventRepository.findById(eventId)
-                .orElseThrow(() -> new NotFoundException("События с id=" + eventId + " не существует"));
-        return event.getConfirmedRequests() > 0;
+    private EventFullDto getEventFullDto(Event event, Long userId) {
+        Map<Long, Double> ratings;
+        try {
+            ratings = analyzerClient.getInteractionsCount(List.of(event.getId()));
+        } catch (StatusRuntimeException e) {
+            log.error("Failed to fetch rating for eventId={}: {}", event.getId(), e.getStatus(), e);
+            ratings = Map.of();
+        }
+
+        double rating = ratings.getOrDefault(event.getId(), 0.0);
+        event.setRating(rating);
+
+        if (userId != null) {
+            try {
+                collectorClient.viewEvent(userId, event.getId());
+                log.info("Recorded VIEW action for userId={} and eventId={}", userId, event.getId());
+            } catch (StatusRuntimeException e) {
+                log.error("gRPC error while recording VIEW for eventId={}: {}", event.getId(), e.getStatus(), e);
+            }
+        }
+
+        UserShortDto initiator = userClient.getUsers(List.of(event.getInitiatorId()), 0, 1).stream()
+                .map(userDto -> UserShortDto.builder().id(userDto.getId()).name(userDto.getName()).build())
+                .findFirst()
+                .orElseThrow(() -> new NotFoundException("Пользователь с id=" + event.getInitiatorId() + " не найден"));
+
+        return eventMapper.toFullDto(event, initiator);
     }
 }
